Update parent and misc fixes